Ajuste icone close

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="modal-agendamento">
 
             <div class="close-modal">
-                <img id="close-modal" src="../img/🦆 icon _close_.svg" alt="close">
+                <img id="close-modal" src="img/🦆 icon _close_.svg" alt="close">
             </div>
             
             <div class="modal-header">
