--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="menus">
             <a class="font" href="#servicos">Serviços</a>
             <a class="font" href="#contatos">Contatos</a>
+            <a class="font" href="admin/login.html">Administrador</a>
         </div>
 
         <div class="agenda-header">
